--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body {
   font-family: "Inter", sans-serif;
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   height: 800px;
   margin: 0 auto;
   padding: 0 24px;
